--- a/docling_granite_question_answering.ipynb
+++ b/docling_granite_question_answering.ipynb
@@ -1,26 +1,6 @@
 {
  "cells": [
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Build a document-based question answering system by using Docling with Granite 3.1\n",
-    "\n",
-    "**Authors:** Ash Minhas, Anna Gutowska\n",
-    "\n",
-    "In this tutorial, you will use IBM® [Docling](https://github.com/DS4SD/docling) and open-source [Granite™ 3.1](https://www.ibm.com/granite) to perform document visual question answering for various file types. \n",
-    "\n",
-    "## What is Docling? \n",
-    "\n",
-    "Docling is an IBM open-source toolkit for parsing documents and exporting them to preferred formats. Input file formats include PDF, DOCX, PPTX, XLSX, Images, HTML, AsciiDoc and Markdown. These documents can be exported to markdown or JSON. Docling also provides [OCR (optical character recognition)](https://www.ibm.com/think/topics/optical-character-recognition) support for scanned documents. Use cases include scanning medical records, banking documents and even travel documents for quicker processing. \n",
-    "\n",
-    "## RAG and large context windows\n",
-    "\n",
-    "[Retrieval augmented generation (RAG)](https://www.ibm.com/think/topics/retrieval-augmented-generation) is an architecture for connecting [large language models (LLMs)](https://www.ibm.com/topics/large-language-models) with external knowledge bases without [fine-tuning](https://www.ibm.com/topics/fine-tuning) or retraining. Text is embedded, stored in a vector database and finally, is used by the pre-trained model to return relevant information for [natural language processing (NLP)](https://www.ibm.com/think/topics/natural-language-processing) and [machine learning](https://www.ibm.com/topics/machine-learning) tasks. \n",
-    "\n",
-    "When an LLM has a larger [context window](<https://www.ibm.com/think/topics/context-window#:~:text=The%20context%20window%20(or%20%E2%80%9Ccontext,of%20information%20into%20each%20output.>), the generative AI model can process more information at once. This means that we can use both RAG and models with large context windows to leverage the ability to efficiently process more relevant information at a time. The LLM we use in this tutorial is the IBM `Granite-3.1-8B-Instruct` model. This model extends to a context window size of 128K tokens. We will access the model locally by using [Ollama](https://ollama.com/), without the use of an [API](https://www.ibm.com/topics/api). This model is also available on [Hugging Face](https://huggingface.co/ibm-granite). \n"
-   ]
-  },
+  
   {
    "cell_type": "markdown",
    "metadata": {},
@@ -467,7 +447,7 @@
     "\n",
     "## Conclusion\n",
     "\n",
-    "Using Docling and Granite 3.1, you built a document question answering system compatible with various file types. As a next step, this methodology can be applied to a [chatbot](https://www.ibm.com/topics/chatbots) with an interactive UI. There are many opportunities to transform this tutorial to apply to specific use cases. "
+    "Using Docling and Granite 3.1, i built a document question answering system compatible with various file types. As a next step, this methodology can be applied to a chatbot with an interactive UI. There are many opportunities to transform this tutorial to apply to specific use cases. "
    ]
   }
  ],
